syntax = "proto3";

package SeppoService;

import "ew_database.proto";
import "ew_song.proto";
import "ew_verse.proto";

service Seppo {
	// Queries

	rpc listenForChangedEwSong(ListenForChangedEwSongRequest) returns(stream EwSong) {}

	// Mutations

	rpc syncEwDatabase(SyncEwDatabaseRequest) returns(SyncEwDatabaseResponse) {}
}